markup and styled modal

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @use "./components/container";
 @use "./components/title";
 @use "./components/social-list";
+@use "./components/modal";
 
 @use './layouts/header';
 @use "./layouts/hero";
