--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -85,7 +85,7 @@
         justify-content: center;
         width: 24px;
         height:24px;
-        border: solid 1px black;
+        box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
         border-radius: 50%;
     
         &:hover {
