--- a/src/scss/layouts/_advantages.scss
+++ b/src/scss/layouts/_advantages.scss
@@ -8,10 +8,24 @@
     gap: 72px;
 }
 
+.advantages__title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: calc(40/36);
+    letter-spacing: 0.72px;
+}
+
 @media (min-width: 768px) and (max-width: 1439px) {
     .advantages__list {
         grid-template-columns: 1fr 1fr;
         gap: 72px 24px;
+    }
+}
+
+@media (min-width: 768px) {
+    .advantages__title {
+        text-align: start;
     }
 }
 
@@ -21,17 +35,24 @@
         gap: 24px;
     }
 
-    .advantages__title::before {
-        content: "";
-        display: block;
-        border-radius: 4px;
-        margin-bottom: 8px;
-        height: 112px;
-        background-color: fn.get-color('light');
-        border: 1px solid fn.get-color("subtle-text");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
+    .advantages__title {
+        font-size: 20px;
+        font-weight: 500;
+        line-height: calc(24/20);
+        letter-spacing: 0.4px;
+
+        &::before {
+            content: "";
+            display: block;
+            border-radius: 4px;
+            margin-bottom: 8px;
+            height: 112px;
+            background-color: fn.get-color('light');
+            border: 1px solid fn.get-color("subtle-text");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
     }
 
     @each $item in antenna, astronaut, clock, diagram {
