--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -64,11 +64,15 @@
         }
     }
 
+    .header__social {
+        max-width: 280px;
+    }
+
     .header__button-open {
         display: flex;
         align-items: center;
-        width: 34px;
-        height:34px;
+        width: 24px;
+        height: 24px;
     
         & > svg {
             width: 24px;
@@ -104,7 +108,7 @@
         line-height: calc(40/36);
         letter-spacing: 0.72px;
         margin-bottom: 168px;
-        padding: 72px 0;
+        padding: 72px 0 0 0;
 
         & .header__nav-item:not(:last-child) {
             margin-bottom: 40px;
@@ -154,6 +158,10 @@
         justify-content: space-between;
     }
     
+    .header__contacts {
+        padding: 16px 0;
+    }
+
     .header__button-open,
     .header__button-close {
         display: none;
