--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -55,10 +55,8 @@
 
 @media (min-width: 768px) and (max-width: 1439px) {
     .hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.70)), url(/src/img/hero-bg-tablet-2x.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+        url(/src/img/hero-bg-tablet-2x.jpg) center/cover no-repeat;
     } 
 
     .hero__wrapper {
@@ -72,10 +70,8 @@
 
 @media (min-width: 1440px) {
     .hero {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.70)), url(/src/img/hero-bg-desktop-2x.jpg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+        background: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), 
+        url(/src/img/hero-bg-desktop-2x.jpg) center/cover no-repeat;;
     }    
 
     .hero__wrapper {
