--- a/src/scss/layouts/_portfolio.scss
+++ b/src/scss/layouts/_portfolio.scss
@@ -10,7 +10,14 @@
 
 .portfolio__link {
     display: block;
+    overflow: hidden;
     transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover .portfolio__img-wrapper::before,
+    &:hover .portfolio__text {
+        opacity: 1;
+        transform: translateX(0);
+    }
 
     &:hover,
     &:focus {
@@ -24,6 +31,31 @@
     border-right: 1px solid fn.get-color("accent");
     border-bottom: 1px solid fn.get-color("accent");
     border-left: 1px solid fn.get-color("accent");
+}
+
+.portfolio__img-wrapper {
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: "";
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        background-color: fn.get-color("brand-primary");
+        opacity: 0;
+        transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateX(-100%);
+    }
+}
+
+.portfolio__text {
+    color: fn.get-color("light");
+    padding: 40px 32px 0 32px;
+    position: absolute;
+    opacity: 0;
+    transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateX(-100%);
 }
 
 @media (min-width: 768px) and (max-width: 1439px) {
