--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -10,11 +10,13 @@
     height: 100%;
     background-color: rgba(46, 47, 66, 0.40);
     opacity: 1;
+    transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
+    transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
