--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -146,9 +146,32 @@
         }
     }
 
+    .header__nav-link::after {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        content: "";
+        display: inline-block;
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: fn.get-color("brand-primary");
+        transform: translateX(100%);
+        opacity: 0;
+        transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
     .header__nav-item {
+        position: relative;
         font-weight: 500;
         padding: 24px 0;
+        overflow: hidden;
+
+        &:hover .header__nav-link::after {
+            transform: translateX(0);
+            opacity: 1;
+            transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
     }
 
     .header__nav {
@@ -156,10 +179,6 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-    }
-    
-    .header__contacts {
-        padding: 16px 0;
     }
 
     .header__button-open,
