--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -12,3 +12,5 @@ $colors: (
     "white-bg": #FFFFFF,
     "modal-bg":#2E2F4266
 );
+
+$bg-gradient: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
